# Patentify

./: .gitignore  Dockerfile  README.md  docker-compose.yml  insert_into_db.py  process.py  pyproject.toml
algo/db_object/: All_analytics.sql  Patent_request.sql  find_similarity.sql  pure_inn.sql
algo/hackaton_project/hackaton_project/: urls.py  wsgi.py
algo/hackaton_project/myapp/: middleware.py
algo/hackaton_project/myapp/static/myapp/: analytics.js  style.css  upload.js
db_object/: All_analytics.sql  Patent_request.sql  address_matching.sql  analytics_by_unix.sql  create_space.sql  find_similarity.sql  find_similarity_v2.sql  inn_raw.sql  valid_patent.sql
hackaton_project/: manage.py
hackaton_project/hackaton_project/: asgi.py  settings.py  urls.py
hackaton_project/media/: result_ПООД.csv  result_ПООД_1WrZgai.csv  ПООД 2.csv  ПООД.csv
hackaton_project/myapp/: middleware.py  views.py
hackaton_project/myapp/static/myapp/: analytics.js  ssn-search.js  style.css  upload-form.js  upload.js
hackaton_project/myapp/templates/: analytics.html  error.html  upload.html
hackaton_project/myapp/templates/elements/: header.html  upload.html
